--- a/02-pod.yml
+++ b/02-pod.yml
@@ -1,4 +1,4 @@
-apiVersion: v2
+apiVersion: v1
 kind: pod
 metadata:
   name: nginx
@@ -7,4 +7,4 @@ metadata:
 spec:
   containers:
   - name: nginx
-    image: nginx
+    image: nginx:1.14.2
