--- a/10-secret.yml
+++ b/10-secret.yml
@@ -1,8 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: secret-pod
+  name: pod-secret
+  labels:
+    purpose: secret
+    env: dev
 type: Opaque
 data:
   username: "YWRtaW4="
-  password: "YWRtaW5AMTIz"
+  password: "YWRtaW4zMjE="
