--- a/volumes/01-ebs-static.yml
+++ b/volumes/01-ebs-static.yml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: ebs-static
+  labels:
+    purpose: ebs-static-demo
+    project: roboshop
 spec:
   accessModes:
   - ReadWriteOnce
@@ -29,6 +32,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx
+  labels:
+    purpose: ebs-static-demo
+    project: roboshop
 spec:
   nodeSelector:
     topology.kubernetes.io/zone: us-east-1d
@@ -42,3 +48,20 @@ spec:
   - name: persistent-storage
     persistentVolumeClaim:
       claimName: ebs-static-claim
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: ebs-static
+  labels:
+    purpose: ebs-static-demo
+    project: roboshop
+spec:
+  type: LoadBalancer
+  selector:
+    purpose: ebs-static-demo
+    project: roboshop
+  ports:
+    - protocol: TCP
+      port: 80 # service port
+      targetPort: 80 # container port
