kubernetes statefulset changes

--- a/17-statefulset.yml
+++ b/17-statefulset.yml
@@ -58,7 +58,7 @@ spec:
       name: www
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "efs-roboshop"
+      storageClassName: "ebs-sc"
       resources:
         requests:
           storage: 2Gi
